[gd_scene load_steps=71 format=3 uid="uid://b5xhiwa1iy42"]

[ext_resource type="Script" uid="uid://fbqmytkglb1t" path="res://scenes/characters/player/player.gd" id="1_6avc5"]
[ext_resource type="AudioStream" uid="uid://dchro2t67htf4" path="res://sounds/landing.mp3" id="2_42irl"]
[ext_resource type="AudioStream" uid="uid://s36l24f7ksa8" path="res://sounds/running.mp3" id="2_mk55u"]
[ext_resource type="AudioStream" uid="uid://b6c7ksumoqt1w" path="res://sounds/jump.mp3" id="2_xuses"]
[ext_resource type="AudioStream" uid="uid://bx2yckg2lyy6y" path="res://sounds/slash.mp3" id="5_3xnwo"]
[ext_resource type="Texture2D" uid="uid://5snrisydg25n" path="res://sprites/characters/player/player_attack1.png" id="6_xuses"]
[ext_resource type="Texture2D" uid="uid://b3ckxxwg8ewhv" path="res://sprites/characters/player/player_idle.png" id="7_42irl"]
[ext_resource type="Texture2D" uid="uid://cpn1u3qmasbqc" path="res://sprites/characters/player/player_dead.png" id="7_djydg"]
[ext_resource type="Texture2D" uid="uid://c8ergd3nfiknr" path="res://sprites/characters/player/player_fall.png" id="8_bsn6e"]
[ext_resource type="Texture2D" uid="uid://bpbtinlj1e5g1" path="res://sprites/characters/player/player_jump.png" id="10_blysn"]
[ext_resource type="Texture2D" uid="uid://dnjvt8kdhj65g" path="res://sprites/characters/player/player_roll.png" id="11_bsn6e"]
[ext_resource type="Texture2D" uid="uid://lvb10raqid4l" path="res://sprites/characters/player/player_run.png" id="12_bsn6e"]
[ext_resource type="Texture2D" uid="uid://l1mh47fj36fa" path="res://sprites/effects/dust.png" id="13_dust"]
[ext_resource type="AudioStream" uid="uid://lkkxnhrvmrgl" path="res://sounds/hit.mp3" id="14_hv5x3"]
[ext_resource type="AudioStream" uid="uid://m1xbggirxheh" path="res://sounds/small_enemy/small_enemy_hurt/hurt3.mp3" id="14_i1nod"]
[ext_resource type="AudioStream" uid="uid://c2ff3ruq7yhl4" path="res://sounds/small_enemy/small_enemy_hurt/hurt.mp3" id="15_4kqyw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_djydg"]
atlas = ExtResource("6_xuses")
region = Rect2(0, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsn6e"]
atlas = ExtResource("6_xuses")
region = Rect2(502, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_blysn"]
atlas = ExtResource("6_xuses")
region = Rect2(1004, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv5x3"]
atlas = ExtResource("6_xuses")
region = Rect2(1506, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrpk"]
atlas = ExtResource("6_xuses")
region = Rect2(2008, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1nod"]
atlas = ExtResource("6_xuses")
region = Rect2(2510, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kqyw"]
atlas = ExtResource("6_xuses")
region = Rect2(3012, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_svuau"]
atlas = ExtResource("6_xuses")
region = Rect2(3514, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro20i"]
atlas = ExtResource("6_xuses")
region = Rect2(4016, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y75b"]
atlas = ExtResource("6_xuses")
region = Rect2(4518, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt8su"]
atlas = ExtResource("7_djydg")
region = Rect2(0, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_10pim"]
atlas = ExtResource("7_djydg")
region = Rect2(502, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbtrp"]
atlas = ExtResource("7_djydg")
region = Rect2(1004, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_es5sa"]
atlas = ExtResource("7_djydg")
region = Rect2(1506, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxlma"]
atlas = ExtResource("7_djydg")
region = Rect2(2008, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieypo"]
atlas = ExtResource("7_djydg")
region = Rect2(2510, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_sulyr"]
atlas = ExtResource("7_djydg")
region = Rect2(3012, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_71adu"]
atlas = ExtResource("8_bsn6e")
region = Rect2(0, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm30n"]
atlas = ExtResource("8_bsn6e")
region = Rect2(502, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe74o"]
atlas = ExtResource("8_bsn6e")
region = Rect2(1004, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4se6"]
atlas = ExtResource("8_bsn6e")
region = Rect2(1506, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c5ab"]
atlas = ExtResource("8_bsn6e")
region = Rect2(2008, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_tebod"]
atlas = ExtResource("7_42irl")
region = Rect2(0, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nfx3"]
atlas = ExtResource("7_42irl")
region = Rect2(502, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hnlq"]
atlas = ExtResource("7_42irl")
region = Rect2(1004, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_d73qs"]
atlas = ExtResource("7_42irl")
region = Rect2(1506, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6wme"]
atlas = ExtResource("7_42irl")
region = Rect2(2008, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxwvg"]
atlas = ExtResource("7_42irl")
region = Rect2(2510, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_omk8d"]
atlas = ExtResource("10_blysn")
region = Rect2(0, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_kghjy"]
atlas = ExtResource("10_blysn")
region = Rect2(502, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_72eiu"]
atlas = ExtResource("10_blysn")
region = Rect2(1004, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr0sw"]
atlas = ExtResource("10_blysn")
region = Rect2(1506, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejaeo"]
atlas = ExtResource("10_blysn")
region = Rect2(2008, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbkvr"]
atlas = ExtResource("11_bsn6e")
region = Rect2(0, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofe5m"]
atlas = ExtResource("11_bsn6e")
region = Rect2(502, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiw4v"]
atlas = ExtResource("11_bsn6e")
region = Rect2(1004, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rnk"]
atlas = ExtResource("11_bsn6e")
region = Rect2(1506, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_8clsk"]
atlas = ExtResource("11_bsn6e")
region = Rect2(2008, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v4cy"]
atlas = ExtResource("12_bsn6e")
region = Rect2(0, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8rto"]
atlas = ExtResource("12_bsn6e")
region = Rect2(502, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4gk5"]
atlas = ExtResource("12_bsn6e")
region = Rect2(1004, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0hd7"]
atlas = ExtResource("12_bsn6e")
region = Rect2(1506, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpigg"]
atlas = ExtResource("12_bsn6e")
region = Rect2(2008, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba42v"]
atlas = ExtResource("12_bsn6e")
region = Rect2(2510, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_em43t"]
atlas = ExtResource("12_bsn6e")
region = Rect2(3012, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvt27"]
atlas = ExtResource("12_bsn6e")
region = Rect2(3514, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4s5w"]
atlas = ExtResource("12_bsn6e")
region = Rect2(4016, 0, 502, 502)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsb6l"]
atlas = ExtResource("12_bsn6e")
region = Rect2(4518, 0, 502, 502)

[sub_resource type="SpriteFrames" id="SpriteFrames_sulyr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djydg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsn6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blysn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv5x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykrpk")
}],
"loop": false,
"name": &"attack1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1nod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kqyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svuau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro20i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y75b")
}],
"loop": false,
"name": &"attack2",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt8su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10pim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbtrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es5sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxlma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieypo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sulyr")
}],
"loop": false,
"name": &"death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71adu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm30n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe74o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4se6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c5ab")
}],
"loop": true,
"name": &"fall",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tebod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nfx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hnlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d73qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6wme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxwvg")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omk8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kghjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72eiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr0sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejaeo")
}],
"loop": true,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbkvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiw4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8clsk")
}],
"loop": true,
"name": &"roll",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v4cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8rto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4gk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0hd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpigg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em43t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvt27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4s5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsb6l")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6avc5"]
size = Vector2(44.68156, 112)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dust"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 1.5
color = Color(1, 1, 1, 0.15)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_landing_dust"]
particle_flag_disable_z = true
spread = 0.0
initial_velocity_min = 140.0
initial_velocity_max = 240.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.6
scale_max = 1.6
color = Color(1, 1, 1, 0.2)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_landing_dust_left"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 0.0
initial_velocity_min = 140.0
initial_velocity_max = 240.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.6
scale_max = 1.6
color = Color(1, 1, 1, 0.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(116.48622, 60)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.6756309, 0.6756309)
collision_layer = 2
safe_margin = 0.14
script = ExtResource("1_6avc5")
attack_knockback = 200.0

[node name="landing" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-1, 1)
stream = ExtResource("2_42irl")

[node name="jump" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-1, 1)
stream = ExtResource("2_xuses")

[node name="walk" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-1, 1)
stream = ExtResource("2_mk55u")

[node name="slash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3xnwo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.0000157, 4.999999)
scale = Vector2(0.4661355, 0.4661355)
sprite_frames = SubResource("SpriteFrames_sulyr")
animation = &"death"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.4800978, 5.9203925)
shape = SubResource("RectangleShape2D_6avc5")

[node name="DustParticles" type="GPUParticles2D" parent="."]
position = Vector2(-16.281073, 56.243713)
emitting = false
amount = 7
texture = ExtResource("13_dust")
lifetime = 0.4
process_material = SubResource("ParticleProcessMaterial_dust")

[node name="LandingDustParticles" type="GPUParticles2D" parent="."]
position = Vector2(11.840786, 56.24372)
emitting = false
amount = 1
texture = ExtResource("13_dust")
lifetime = 0.35
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_landing_dust")

[node name="LandingDustParticlesLeft" type="GPUParticles2D" parent="."]
position = Vector2(-25.161652, 56.243713)
emitting = false
amount = 1
texture = ExtResource("13_dust")
lifetime = 0.35
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_landing_dust_left")

[node name="PlayerArea" type="Area2D" parent="."]
position = Vector2(13.320892, 0)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(-17.900501, 5.920393)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_6avc5")

[node name="Hitbox" type="Area2D" parent="." groups=["player_hitbox"]]
position = Vector2(60, 6)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-41.27803, 25.08206)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_hitbox")

[node name="HitboxTimer" type="Timer" parent="."]
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(13.320885, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-14.060934, 5.920393)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_6avc5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-8.880592, -173.17146)
scale = Vector2(0.46613553, 0.46613553)
position_smoothing_enabled = true

[node name="Death" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(1.0000001, 1.0000001)
stream = ExtResource("14_i1nod")

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(1.0000001, 1.0000001)
stream = ExtResource("15_4kqyw")

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_hv5x3")

[node name="LeftWallDetector" type="RayCast2D" parent="."]
position = Vector2(-15, 0)
target_position = Vector2(-20.522352, 0)

[node name="RightWallDetector" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(20, 0)
